added new route

--- a/views/node.hbs
+++ b/views/node.hbs
@@ -1,2 +1,6 @@
 <h1>Walao</h1>
 {{ message }}
+<form action="/message" method="post">
+  <input type="text" name = "message">
+  <button type="submit" name="Send"> Submit </button>
+</form>
