use mongoose for data

--- a/views/node.hbs
+++ b/views/node.hbs
@@ -1,6 +1,6 @@
-<h1>Walao</h1>
-{{ message }}
-<form action="/message" method="post">
-  <input type="text" name = "message">
+<h1>User Form</h1>
+{{ email}}
+<form action="/" method="post">
+  <input type="email" name = "email">
   <button type="submit" name="Send"> Submit </button>
 </form>
