--- a/assets/app/app.component.html
+++ b/assets/app/app.component.html
@@ -1,11 +1,6 @@
 <div class= "container">
-    <div class= "row">
-        <app-message-input>
-        </app-message-input>
-    </div>
+    <app-header>
+    </app-header>
     <hr>
-    <div class= "row">
-        <app-message-list>
-        </app-message-list>
-    </div>
+    <router-outlet></router-outlet>
 </div>
