--- a/assets/app/messages/message-input.component.html
+++ b/assets/app/messages/message-input.component.html
@@ -1,7 +1,9 @@
 <div class="col-md-8 col-md-offset-2">
+    <form ngNativeValidate (ngSubmit)="onSubmit(f)" #f="ngForm">
         <div class="form-group">
             <label for="content">Comments on Live Game</label>
-            <input type="text" id="content" class="form-control" #input>
+            <input type="text" id="content" class="form-control" ngModel name="content" required>
         </div>
-        <button  class="btn btn-primary" type="submit"  (click)="onSave(input.value)">Post on Live Sports Chat Group</button>
+        <button  class="btn btn-primary" type="submit">Post on Live Sports Chat Group</button>
+    </form>
 </div >
