--- a/assets/app/messages/message-input.component.html
+++ b/assets/app/messages/message-input.component.html
@@ -2,8 +2,9 @@
     <form ngNativeValidate (ngSubmit)="onSubmit(f)" #f="ngForm">
         <div class="form-group">
             <label for="content">Comments on Live Game</label>
-            <input type="text" id="content" class="form-control" ngModel name="content" required>
+            <input type="text" id="content" class="form-control" [ngModel]="message?.content" name="content" required>
         </div>
         <button  class="btn btn-primary" type="submit">Post on Live Sports Chat Group</button>
+        <button  class="btn btn-danger" type="button" (click)="onClear(f)">Clear</button>
     </form>
 </div >
